Button overflow fixed

--- a/source/assets/css/components/button.scss
+++ b/source/assets/css/components/button.scss
@@ -23,6 +23,7 @@
 
   @extend %u-cursor-pointer;
   @extend %u-position-relative;
+  @extend %u-overflow-hidden; // prevents svg viewbox overflow
 }
 
 .button__menu,
